<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">面酵</string>
    <string name="symbol_add">+</string>
    <string name="arrow_right">></string>
    <string name="symbol_rmb">RMB</string>
    <string name="official_price">官方报价</string>
    <string name="more_businesses">更多商家></string>
    <string name="backbtn_blank_text_8">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="backbtn_blank_text_4">&#160;&#160;&#160;&#160;</string>
    <!-- 快速选择位置 -->
    <string name="btn_location_home">在家</string>
    <string name="btn_location_company">在公司</string>
    <string name="btn_location_other">其他</string>
    <!-- searchFragment -->
    <string name="search">搜索</string>
    <string name="business_recommendatio">商家推荐</string>
    <string name="recent_update">最近更新</string>
    <string name="nearest_distance">最近距离</string>
    <string name="cheapest_price">最低价格</string>
    <string name="about_us">关于我们</string>
    <string name="user_info">个人信息</string>
    <string name="my_red_packet">我的红包</string>
    <string name="delivery_address">收货地址</string>
    <string name="order_history">历史订单</string>
    <string name="about_us_content">面酵LEAVEN（www.leaven.top）是一家移动互联网创业公司，成立于2008年，专注于本地化消费，建立高效便捷零售体系。依靠移动互联网推动半小时生活圈，用户根据地理位置选择自己最近的商品，在线发起订单，用户可到店提货，也可选择由商家配送。\n
“面酵，智能、精准、极速消费”是我们的产品理念，我们致力于为用户提供快速、精准的线上购物体验，依托移动互联网的优势，让家庭生活变得更丰富、精彩。我们是一支拥有丰富互联网行业经验的团队，我们有6年零售行业经验，对线下零售、线上零售、B2B、B2C、C2C、C2B、O2O、ERP、CRM等进行标准化管理，重视用户体验，推崇极客精神，致力于创作极致的产品帮助商家快速去库存化、降低运营成本、降低运营风险、精准管理顾客、管理商品。商家从此经营不再受区域限制、不受地段限制、不受创业门槛限制。\n
公司主要产品正在研发、测试阶段，如果您期望挑战自己，超越自己，欢迎您加入，让我们一起扬帆远航，为荣誉而战。</string>
    <string name="press_again_finish">再次按返回键退出</string>
    <string name="location_activity_searchbar">输入地址开始定位</string>
    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="username">用户名：</string>
    <string name="identify_code">验证码：</string>
    <string name="click_send_identify_code">点击发送验证码</string>
    <string name="password">密&#160;&#160;&#160;&#160;码：</string>
    <!-- 登录注册提示 -->
    <string name="tips_empty_username">请输入用户名</string>
    <string name="tips_empty_password">请输入密码</string>
    <string name="tips_error_identify_code">请输入正确的验证码</string>

</resources>