<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/popLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/login_register_padding"
        android:background="@drawable/bg_login_register"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_item_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_item_gap"
            android:paddingRight="@dimen/default_item_gap" >

            <TextView
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:text="@string/username" />

            <EditText
                android:id="@+id/edtUserName"
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_transparent"
                android:gravity="left|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_divide_line"
            android:background="@color/login_register_light_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_item_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_item_gap"
            android:paddingRight="@dimen/default_item_gap" >

            <TextView
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_transparent"
                android:gravity="left|center_vertical"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_divide_line"
            android:background="@color/login_register_light_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_item_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btnCancel"
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel" />

            <View
                android:layout_width="@dimen/default_divide_line"
                android:layout_height="match_parent"
                android:background="@color/login_register_light_blue" />

            <TextView
                android:id="@+id/btnSure"
                style="@style/LoginRegisterPopupWindow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>