<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnLocation"
            style="@style/SearchFragmentDarkGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="位置" />

        <ImageView
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:src="@drawable/ic_scan" />

        <EditText
            android:id="@+id/edtSearch"
            style="@style/SearchFragmentDarkGrayText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/searchfragment_edit_height"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnScan"
            android:layout_toRightOf="@id/btnLocation"
            android:background="@drawable/bg_edit"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/default_text_padding"
            android:gravity="center"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:paddingLeft="@dimen/default_text_padding"
            android:paddingRight="@dimen/default_text_padding"
            android:singleLine="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnSearchTabLeft"
            style="@style/SearchFragmentSelectTabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_text_padding"
            android:text="@string/business_recommendatio" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/searchfragment_divide_line" />

        <TextView
            android:id="@+id/btnSearchTabRight"
            style="@style/SearchFragmentSelectTabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_text_padding"
            android:text="@string/recent_update" />
    </LinearLayout>

</LinearLayout>