<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/home_adapter_item_padding"
    android:paddingRight="@dimen/home_adapter_item_padding" >

    <ImageView
        android:id="@+id/imgGoodImg"
        android:layout_width="@dimen/home_adapter_item_good_img_size"
        android:layout_height="@dimen/home_adapter_item_good_img_size"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/default_text_padding"
        android:layout_marginRight="@dimen/default_item_gap"
        android:layout_marginTop="@dimen/default_text_padding" />

    <TextView
        android:id="@+id/tvGoodName"
        style="@style/HomeAdapterGoodNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgGoodImg"
        android:layout_toRightOf="@id/imgGoodImg"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvRMB"
        style="@style/HomeAdapterRMBText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvGoodPrice"
        android:layout_marginRight="@dimen/default_item_gap"
        android:layout_toRightOf="@id/imgGoodImg"
        android:text="@string/symbol_rmb" />

    <TextView
        android:id="@+id/tvGoodPrice"
        style="@style/HomeAdapterGoodPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGoodName"
        android:layout_marginTop="@dimen/default_text_padding"
        android:layout_toRightOf="@id/tvRMB" />

    <TextView
        style="@style/HomeAdapterRMBText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvRMB"
        android:layout_marginRight="@dimen/default_item_gap"
        android:layout_toLeftOf="@+id/btnAddGood"
        android:text="@string/more_businesses" />

    <TextView
        android:id="@+id/tvDistanceAddress"
        style="@style/HomeAdapterDistanceAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRMB"
        android:layout_marginBottom="@dimen/default_text_padding"
        android:layout_marginTop="@dimen/default_text_padding"
        android:layout_toRightOf="@id/imgGoodImg" />

    <ImageView
        android:id="@+id/imgAddGoodBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/symbol_add_normal" />

    <TextView
        android:id="@+id/btnAddGood"
        android:layout_width="@dimen/symbol_add_normal_size"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingBottom="@dimen/default_item_gap"
        android:paddingTop="@dimen/default_item_gap"
        android:text="@string/symbol_add"
        android:textColor="@color/default_white" />

    <View
        style="@style/DefaultHorizontalDivideLine"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true" />

</RelativeLayout>